<resources>
    <string name="app_name">My Cash Register</string>
    <string name="product_name">Product Name: </string>
    <string name="unit_price">Unit Price: </string>
    <string name="quantity">Quantity: </string>
    <string name="total_cost">Total Cost:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clear">AC</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="delete">Del</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="cancel">Cancel</string>
    <string name="buy">Buy</string>
    <string name="available_quantity">Available Quantity:</string>
    <string name="no_item_available">No Item Available, Please add item through the manager portal!</string>
    <string name="inventory">Inventory</string>
    <string name="manager">Manager</string>
    <string name="add_button">Add Button</string>
    <string name="update">Update</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_unit_price">Enter Unit Price</string>
    <string name="user_name">User Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="home_page">Home Page</string>
    <string name="would_you_like_to_return_to_the_home_page">Would you like to return to the home page?</string>
    <string name="purchase_history">Purchase History</string>
    <string name="back_button">Back Button</string>
    <string name="histoty_button">Histoty Button</string>
    <string name="no_purchase_history_available">No Purchase History Available!</string>
    <string name="quantity_required">Quantity Required!</string>
    <string name="managerLogin">Manager Login</string>
</resources>