<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManagerLogin">


    <!-- Top App Bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="My Cash Register"
        app:titleTextColor="?attr/colorOnPrimary"
        app:menu="@menu/top_app_bar_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="-13dp"
            android:backgroundTint="#00000000"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/managerLogin"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:layout_marginVertical="22dp"/>


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_marginVertical="22dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedUsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:hint="@string/enter_username"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:layout_marginVertical="18dp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/enter_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="60dp"
            app:cornerRadius="30dp"
            android:layout_marginVertical="36dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:backgroundTint="#696A5097"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/would_you_like_to_return_to_the_home_page"
            android:textStyle="normal"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"/>

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/home_page"
            android:textColor="#1A84F6"
            android:textAllCaps="true"
            android:backgroundTint="#006A5097"
            android:layout_gravity="center"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>